--- a/jsf_06_web/src/main/webapp/WEB-INF/web.xml
+++ b/jsf_06_web/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	</context-param>
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>saga</param-value>
+		<param-value>vela</param-value>
 	</context-param>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
@@ -26,8 +26,8 @@
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
 	</welcome-file-list>
-	<error-page>
-		<exception-type>jakarta.faces.application.ViewExpiredException</exception-type>
-		<location>/personList.xhtml</location>
-	</error-page>
+	<mime-mapping>
+		<extension>ico</extension>
+		<mime-type>assets/images/</mime-type>
+	</mime-mapping>
 </web-app>
